--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Deriv - Localisation</title>
+    <title>Deriv - Translations</title>
   </head>
-  <body class="localisation-playground">
+  <body class="translations-playground">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
